--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@headlessui/react": "^1.6.3",
     "@heroicons/react": "^1.0.6",
     "firebase": "^9.8.1",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "next": "latest",
     "next-auth": "^4.3.4",
     "react": "^17.0.2",
